adding footer, edit readme

--- a/style.css
+++ b/style.css
@@ -181,3 +181,12 @@ body{
 .congratsmenu{
     text-align: center;
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+  }
